# mariadb-connector-c

./: CMakeLists.txt
include/: mariadb_com.h
libmariadb/: CMakeLists.txt  mariadb_lib.c  my_stmt_codec.c
plugins/auth/: CMakeLists.txt  auth_gssapi_client.c  sspi_client.c
win/packaging/: CMakeLists.txt
